JDK 11 & camel 3.11.0 ready